fix: 解决运行时无法使用JDK预览功能